[package]
name = "iterator"
version = "0.1.0"
authors = ["Pic14kk <piciopicio@wp.pl>"]
edition = "2018"

[[bin]]
name="printout"
path="src/printout.rs"

[[bin]]
name="lf"
path="src/lf.rs"

[[bin]]
name="rc"
path="src/rc.rs"

[[bin]]
name="pool"
path="src/pool.rs"

[[bin]]
name="rayon"
path="src/rayon.rs"

[dependencies]
itertools = "0.8.2"
rayon = "1.3.0"

# cargo login
# cargo publish
