[package]
name = "untitled5"
version = "0.1.0"
authors = ["pwera <piotr.wera@vp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
redis = { version = "0.21.0", features = ["tokio-comp"] }
